[tool.poetry]
name = "slack-bolt-ai-agent"
version = "0.1.0"
description = ""
authors = ["Mitsuki Ogasahara <negiga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
